<resources>
    <string name="app_name" translatable="false">WeatherVibe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">City Name</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="_5_day_forecast">5-Day Forecast</string>
    <string name="sea_level">Sea Level</string>
    <string name="ground_level">Ground Level</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="automatically_detect_your_location_using_gps">Automatically detect your location using GPS</string>
    <string name="choose_on_map">Choose on Map</string>
    <string name="manually_select_a_location_from_the_map">Manually select a location from the map</string>
    <string name="use_gps">Use GPS</string>
    <string name="choose_location">Choose Location</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="alerts">Alerts</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="settings">Settings</string>
    <string name="location_settings">Location Settings</string>
    <string name="use_gps_location">Use GPS Location</string>
    <string name="choose_from_map">Choose from Map</string>
    <string name="units">Units</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="pressure_unit">Pressure Unit</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="elevation_units">Elevation Units</string>
    <string name="visibility_units">Visibility Units</string>
    <string name="language">Language</string>
    <string name="app_language">App Language</string>
    <string name="feels_like">Feels like:</string>
</resources>